# konko-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DECISIONS.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  sonar-project.properties
.epsilon/: memory.db  memory.db-shm
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  sonarcloud.yml
configs/: advanced_agent.yaml  basic_agent.yaml  prometheus.yml
configs/grafana/provisioning/dashboards/: konko-dashboard.json
docs/: CODE_QUALITY_TOOLS.md  CONVERSATION_FLOW.md  IMPLEMENTATION_PLAN.md  PRE_COMMIT_HOOKS.md
http/: api.http
scripts/: config_tools.py  test_progress.sh  verify_setup.py
tests/: __init__.py
tests/unit/: __init__.py  test_agent.py  test_api_app.py  test_api_routes.py  test_config_loader.py  test_config_routes.py  test_config_schemas.py  test_escalation_engine.py  test_escalation_handlers.py  test_graph_edges.py  test_graph_integration.py  test_graph_nodes.py  test_llm_provider.py  test_state.py  test_store.py  test_websocket.py
