[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "konko-agent"
version = "0.1.0"
description = "A configurable conversational agent built with LangChain and LangGraph"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Konko AI Team"}
]

dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.0.40",
    "langsmith>=0.1.0",
    "openai>=1.10.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
    "bandit[toml]>=1.7.0",
    "types-PyYAML>=6.0.0",
    "types-redis>=4.6.0",
    "pydocstyle>=6.3.0",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=23.0.0",
    "flake8-comprehensions>=3.14.0",
    "flake8-simplify>=0.21.0",
    # Static analysis (similar to SonarCloud)
    "pylint>=3.0.0",
    "radon>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["packages"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests",
    "unit: unit tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "N", "W"]  # Note: "I" removed to avoid conflict with isort

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".epsilon"]
skips = ["B101"]  # Skip assert_used check (needed for tests)

[tool.coverage.run]
source = ["packages"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104", "D105", "D107"]

[tool.flake8]
max-complexity = 10
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".epsilon", "tests"]

[tool.pylint.main]
# Paths to analyse
source-roots = ["packages"]
ignore = ["tests", ".venv", ".epsilon"]
ignore-patterns = ["test_.*\\.py"]

[tool.pylint.messages_control]
# Disable messages that conflict with other tools or are too strict
disable = [
    "C0114",  # missing-module-docstring (handled by pydocstyle)
    "C0115",  # missing-class-docstring (handled by pydocstyle)
    "C0116",  # missing-function-docstring (handled by pydocstyle)
    "R0903",  # too-few-public-methods (Pydantic models)
    "R0913",  # too-many-arguments (sometimes necessary)
    "W0511",  # fixme/todo comments
    "E1101",  # no-member (false positives with Pydantic)
    "W0212",  # protected-access (needed for testing)
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 7
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50
max-attributes = 10
min-public-methods = 1

[tool.pylint.similarities]
# Minimum lines number of a similarity
min-similarity-lines = 6
ignore-comments = true
ignore-docstrings = true
ignore-imports = true

[tool.pylint.reports]
output-format = "colorized"
reports = true
score = true
